--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.9",
-    "@react-pdf-viewer/core": "^3.11.0",
-    "@react-pdf-viewer/default-layout": "^3.11.0",
-    "@react-pdf-viewer/zoom": "^3.11.0",
+    "@react-pdf-viewer/core": "3.6.0",
+    "@react-pdf-viewer/default-layout": "3.6.0",
+    "@react-pdf-viewer/zoom": "3.6.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
