--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,7 @@ jobs:
         source_folder: '/'
         destination_repo: 'Jokerweek/database-code'
         destination_folder: '/'
+        destination_branch: 'main'
         user_email: 'philippe.soubrier@gmail.com'
         user_name: 'flol3622'
         commit_msg: '[GHA] Update deploy.'
